<resources>
    <string name="app_name">Caen UHF Sample</string>
    <string name="action_about">A propos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rfid_explanation">Press Rfid button</string>
    <string name="uhf_reader">Lecteur UHF</string>
    <string name="pref_key_uhf_q_summary">%s</string>
    <string name="pref_key_uhf_q_label">Facteur qualité</string>

    <string-array name="uhf_q_values_list">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="pref_key_uhf_power_summary">%s mW</string>
    <string name="pref_key_uhf_power_label">Puissance(mW)</string>

    <string-array name="uhf_power_values_list">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>

    <string name="pref_key_uhf_session_summary">%s</string>
    <string name="pref_key_uhf_session_label">Session</string>

    <string-array name="uhf_session_values_list">
        <item>S0</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="UHF_opened_error">Error opening reader</string>
    <string name="error_power_on">Error powering on reader. Make sure System Services is installed on the device</string>
    <string name="wait_RFID_powered">Waiting RFID powered up…</string>
    <string name="press_RFID_button">Press RFID button</string>
    <string name="opening_RFID_reader">Connecting RFID reader ...</string>
    <string name="action_delete">Delete</string>
    <string name="pref_version">pref_version</string>


</resources>
